--- a/docs/identity/app-proxy/application-proxy-faq.yml
+++ b/docs/identity/app-proxy/application-proxy-faq.yml
@@ -172,9 +172,11 @@ sections:
               > Deleting CWAP_AuthSecret breaks preauthentication for Azure AD Application Proxy. Don't delete CWAP_AuthSecret.
 
       - question: |
-         I'm using or want to use Microsoft Entra application proxy. Can I replace the `onmicrosoft.com` fallback domain of my tenant in Microsoft 365 as suggested in the article *Add and replace your onmicrosoft.com fallback domain in Microsoft 365*? 
+         I'm using or want to use Microsoft Entra application proxy. Can I replace the "onmicrosoft.com" fallback domain of my tenant in Microsoft 365 as suggested in the article "Add and replace your onmicrosoft.com fallback domain in Microsoft 365"? 
         answer: |
-              No. You must use the original fallback domain. Reference article: [Add and replace your onmicrosoft.com fallback domain in Microsoft 365](/microsoft-365/admin/setup/add-or-replace-your-onmicrosoftcom-domain?view=o365-worldwide)
+              No. You must use the original fallback domain.
+              
+              Article mentioned in question: [Add and replace your onmicrosoft.com fallback domain in Microsoft 365](/microsoft-365/admin/setup/add-or-replace-your-onmicrosoftcom-domain?view=o365-worldwide)
 
          
       - question: |
