--- a/docs/identity/saas-apps/toc.yml
+++ b/docs/identity/saas-apps/toc.yml
@@ -1703,6 +1703,8 @@
         href: montageonline-tutorial.md
       - name: Moqups
         href: moqups-tutorial.md
+      - name: Mosaic Project Operations
+        href: mosaic-project-operations-tutorial.md
       - name: Motus
         href: motus-tutorial.md
       - name: MOVEit Transfer - Microsoft Entra integration
