--- a/docs/global-secure-access/toc.yml
+++ b/docs/global-secure-access/toc.yml
@@ -99,6 +99,8 @@ items:
     href: reference-remote-network-configurations.md
   - name: Points of presence
     href: reference-points-of-presence.md
+  - name: Web content filtering categories
+    href: reference-web-content-filtering-categories.md
   - name: Microsoft Graph APIs
     href: /graph/api/resources/networkaccess-global-secure-access-api-overview
   - name: FAQs
