--- a/docs/id-governance/TOC.yml
+++ b/docs/id-governance/TOC.yml
@@ -15,6 +15,8 @@
     href: what-is-provisioning.md
   - name: What are Lifecycle Workflows? 
     href: what-are-lifecycle-workflows.md  
+  - name: What is the My Access portal? 
+    href: my-access-portal-overview.md  
 - name: Tutorials
   expanded: true
   items:
