--- a/.whatsnew/.application-provisioning.json
+++ b/.whatsnew/.application-provisioning.json
@@ -11,7 +11,7 @@
         "minAdditionsToFile" : 10,
         "maxFilesChanged": 50,
         "labels": [
-            "label:entra-id/svc",
+            "label:active-directory/svc",
             "label:app-provisioning/subsvc"
         ]
     },
