--- a/docs/identity/hybrid/TOC.yml
+++ b/docs/identity/hybrid/TOC.yml
@@ -37,8 +37,6 @@
       href:  accounts.md
     - name:  Monitor your environment
       href:  connect/how-to-connect-health-operations.md
-    - name:  Migrate your sync tool
-      href:  cloud-sync/migrate-azure-ad-connect-to-cloud-sync.md
     - name:  Exchange hybrid writeback
       href:  exchange-hybrid-writeback.md
     - name:  Decommission connect sync V1
@@ -135,6 +133,12 @@
         href: cloud-sync/custom-attribute-mapping.md
       - name: Exchange hybrid
         href: cloud-sync/exchange-hybrid.md
+    - name: Migration
+      items:
+      - name:  Migrate your sync tool
+        href:  cloud-sync/migrate-azure-ad-connect-to-cloud-sync.md
+      - name:  Migrate Microsoft Entra Connect Sync group writeback V2 to Microsoft Entra Cloud Sync
+        href:  cloud-sync/migrate-group-writeback.md
     - name: Plan and design
       items:
       - name: Topologies and scenarios for cloud sync
